[gd_scene load_steps=6 format=3 uid="uid://bjcl3dcl2m4ww"]

[ext_resource type="PackedScene" uid="uid://xcdyutsv38fd" path="res://vehicle/dust_glider/dust_glider.glb" id="1_7endq"]
[ext_resource type="Script" uid="uid://dho04lgwpye2l" path="res://vehicle/dust_glider/dust_glider.gd" id="2_jiu6d"]
[ext_resource type="Material" uid="uid://de2cnn6lrxkp8" path="res://vehicle/dust_glider/dust_glider_mat.tres" id="3_lk4lx"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_lk4lx"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7endq"]
radius = 1.21195
height = 3.92504

[node name="dust_glider" groups=["vehicles"] instance=ExtResource("1_7endq")]
collision_layer = 8
collision_mask = 4
mass = 1000.0
physics_material_override = SubResource("PhysicsMaterial_lk4lx")
script = ExtResource("2_jiu6d")
move_force = 5000.0

[node name="model_001" parent="." index="0"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
material_override = ExtResource("3_lk4lx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.0616677, 0)
shape = SubResource("CapsuleShape3D_7endq")

[node name="RayCastFL" type="RayCast3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.840675, -0.450127, 1.24496)
target_position = Vector3(1, -5, 1)
collision_mask = 4

[node name="RayCastFR" type="RayCast3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.841, -0.45, 1.245)
target_position = Vector3(-1, -5, 1)
collision_mask = 4

[node name="RayCastBR" type="RayCast3D" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.841, -0.45, -1.08807)
target_position = Vector3(-1, -5, -1)
collision_mask = 4

[node name="RayCastBL" type="RayCast3D" parent="." index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.841, -0.45, -1.088)
target_position = Vector3(1, -5, -1)
collision_mask = 4
